[project]
name = "agent-ca-server"
version = "2.1.0"
description = "Agent CA 认证服务后端 API"
authors = [{ name = "Team", email = "team@ioa.pub" }]
readme = "README.md"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14,<4.0"
dependencies = [
    "alembic>=1.18.4,<2.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "cryptography>=47.0.0,<48.0.0",
    "fastapi>=0.136.1,<1.0.0",
    "greenlet>=3.5.0,<4.0.0",
    "httpx>=0.28.1,<0.29.0",
    "mako>=1.3.12,<2.0.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "pydantic>=2.13.3,<3.0.0",
    "pydantic-settings>=2.14.0,<3.0.0",
    "structlog>=25.5.0,<26.0.0",
    "sqlalchemy>=2.0.49,<2.1.0",
    "sqlmodel>=0.0.38,<0.1.0",
    "uvicorn[standard]>=0.46.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0,<5.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "factory-boy>=3.3.3,<4.0.0",
    "faker>=40.0,<41.0.0",
    "ruff>=0.15.0,<1.0.0",
    "mypy>=1.20.0,<2.0.0",
    "bandit>=1.9.0,<2.0.0",
    "commitizen>=4.13.0,<5.0.0",
    "pip-audit>=2.10.0,<3.0.0",
]

[build-system]
requires = ["hatchling>=1.29.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "-ra"]
pythonpath = [".", "tests"]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "crl: marks tests related to CRL functionality",
    "ocsp: marks tests related to OCSP functionality",
    "crl_ocsp: marks tests for CRL and OCSP integration",
]

# Coverage 配置
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
fail_under = 70

# Ruff 配置
[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # assert 用于测试
    "RUF001", # 允许字符串中使用中文字符
    "RUF002", # 允许 docstring 中使用中文标点
    "RUF003", # 允许注释中使用中文标点
    "B008",   # FastAPI Depends() 模式
    "TC001",  # 一方 import 在 Pydantic/SQLModel 中作为字段类型，需要运行时解析
    "TC002",  # FastAPI/Pydantic/SQLModel 运行时需要解析注解
    "TC003",  # 同上，标准库 import 同理
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "PTH100", "PTH120"]
"tests/*" = ["S105", "S106", "S303", "S311", "T201"]
# alembic 迁移文件特殊结构：sys.path 操作必须在导入之前
"alembic/env.py" = ["E402", "PTH100", "PTH120"]
"alembic/versions/*.py" = ["E402", "PTH120", "E501", "W291"]
# ACME 协议 RFC 8555 强制要求 camelCase 字段名
"app/acme/schema.py" = ["N815"]
# mock_data.py 中 random 用于测试模拟数据生成，非密码学用途
"app/acme/mock_data.py" = ["S311"]
# OCSP 协议（RFC 6960）要求使用 SHA-1，属于协议规范而非安全漏洞
"app/common/ocsp_service.py" = ["S303", "S324"]
# config.py 中 0.0.0.0 是服务器监听地址，属于可配置的运行时参数
"app/core/config.py" = ["S104"]
# AcmeException 类名遵循 ACME 协议惯例，保留 Exception 后缀
"app/acme/exception.py" = ["N818"]
# __init__.py 中的 __all__ 按功能分组，不强制全局字母序
"app/common/__init__.py" = ["RUF022"]

[tool.ruff.format]
quote-style = "double"

# Mypy 配置
[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
# 无类型桩的第三方依赖
module = ["psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# 所有测试：不强制写类型注解，但开启函数体检查（check_untyped_defs=true）
module = [
    "tests",
    "tests.conftest",
    "tests.unit",
    "tests.unit.*",
    "tests.integration",
    "tests.integration.*",
    "tests.e2e",
    "tests.e2e.*",
]
strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
check_untyped_defs = true
no_implicit_reexport = false
warn_return_any = false
disallow_any_generics = false

# Bandit 安全扫描配置
[tool.bandit]
# app/acme/mock_data.py 中的 random 调用通过 #nosec 注释逐行抑制，非密码学用途
exclude_dirs = ["tests", "alembic"]

# Commitizen 配置
[tool.commitizen]
name = "cz_conventional_commits"
version = "2.1.0"
tag_format = "v$version"
