[project]
name = "demo-leader"
version = "2.1.0"
description = "ACPs Leader Agent 示例应用"
readme = "README.md"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "openai>=1.0",
    "httpx>=0.28",
    "httpx-sse>=0.4",
    "sse-starlette>=2.1",
    "aio-pika>=9.0",
    "tomli>=2.0",
    "python-dotenv>=1.0",
    "acps-sdk",
    "acps-cli",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pytest-xdist>=3.6",
    "factory-boy>=3.3",
    "faker>=37.6",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
    "pre-commit>=4.2",
    "commitizen>=4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leader", "web_app"]

[tool.uv.sources]
acps-sdk = { path = "../acps-sdk", editable = true }
acps-cli = { path = "../acps-cli", editable = true }

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # assert 用于测试
    "RUF001", # 允许字符串中使用中文字符
    "RUF002", # 允许 docstring 中使用中文标点
    "RUF003", # 允许注释中使用中文标点
    "B008",   # FastAPI Depends() 模式
    "TC001",  # 应用内 import 运行时需要解析注解
    "TC002",  # 第三方 import 运行时需要解析注解
    "TC003",  # 标准库 import 同理
    "S104",   # 绑定 0.0.0.0 是预期行为
    "T201",   # print 语句在 CLI/启动代码中允许
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "PTH100", "PTH120"]
"leader/*" = [
    "E402",   # 模块级 import 不在文件顶部（测试文件常见）
    "PTH100",
    "PTH120",
    "PTH123", # pathlib vs os.path（迁移代码）
    "B904",   # raise from err（现有异常处理模式）
    "F841",   # 未使用的本地变量
    "F811",   # 重定义未使用的名称（迁移代码中的重复导入）
    "F401",   # 导入但未使用（迁移代码）
    "B007",   # 未使用的循环变量
    "UP042",  # Optional 类型注解（迁移代码）
    "DTZ005", # datetime.now() 缺少时区
    "N801",   # 类名不符合 CapWords
    "SIM102",
    "SIM105",
    "SIM118",
    "S110",   # bare except
    "RET504", # 不必要的变量赋值
    "A002",   # 参数遮蔽内置名
    "RUF059", # 未使用的解包变量
    "RUF013", # 隐式 Optional
    "RUF022", # __all__ 未排序
    "RUF012", # 可变类属性
    "E501",   # 行太长
    "UP046",  # Generic 子类写法（迁移代码）
    "SIM117",
    "SIM108",
    "SIM110", # 简化建议
    "B905",   # zip() strict=（迁移代码）
    "S112",   # try-except-continue
    "S324",   # md5 hash（用于 ID 生成，非安全场景）
    "B006",   # 可变默认参数
    "PTH110",
    "PTH118", # pathlib vs os.path
]
"tests/**/*.py" = [
    "E402",   # 模块级 import 不在文件顶部（测试文件常见）
    "PTH100",
    "PTH120",
    "PTH123", # pathlib vs os.path（迁移代码）
    "B904",   # raise from err（现有异常处理模式）
    "F841",   # 未使用的本地变量
    "F811",   # 重定义未使用的名称（迁移代码中的重复导入）
    "F401",   # 导入但未使用（迁移代码）
    "B007",   # 未使用的循环变量
    "UP042",  # Optional 类型注解（迁移代码）
    "DTZ005", # datetime.now() 缺少时区
    "N801",   # 类名不符合 CapWords
    "SIM102",
    "SIM105",
    "SIM118",
    "S110",   # bare except
    "RET504", # 不必要的变量赋值
    "A002",   # 参数遮蔽内置名
    "RUF059", # 未使用的解包变量
    "RUF013", # 隐式 Optional
    "RUF022", # __all__ 未排序
    "RUF012", # 可变类属性
    "E501",   # 行太长
    "UP046",  # Generic 子类写法（迁移代码）
    "SIM117",
    "SIM108",
    "SIM110", # 简化建议
    "B905",   # zip() strict=（迁移代码）
    "S112",   # try-except-continue
    "S324",   # md5 hash（用于 ID 生成，非安全场景）
    "B006",   # 可变默认参数
    "PTH110",
    "PTH118", # pathlib vs os.path
    "S105",
    "S106",
    "S107",
]
"web_app/*" = ["PTH100", "PTH120", "PTH123", "A002", "RUF100", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["leader", "leader.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
strict = false
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["unit: 单元测试", "integration: 集成测试", "e2e: 端到端测试", "performance: 性能测试"]
addopts = "--strict-markers -ra"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
update_changelog_on_bump = true
