[project]
name = "demo-partner"
version = "2.1.0"
description = "ACPs Partner Agent 示例应用"
readme = "README.md"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "openai>=1.0",
    "httpx>=0.28",
    "aio-pika>=9.0",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "acps-sdk",
    "acps-cli",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pytest-xdist>=3.6",
    "factory-boy>=3.3",
    "faker>=37.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
    "pre-commit>=4.1",
    "commitizen>=4.4",
    "tomli-w>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["partners"]

[tool.uv.sources]
acps-sdk = { path = "../acps-sdk", editable = true }
acps-cli = { path = "../acps-cli", editable = true }

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # assert 用于测试
    "RUF001", # 允许字符串中使用中文字符
    "RUF002", # 允许 docstring 中使用中文标点
    "RUF003", # 允许注释中使用中文标点
    "B008",   # FastAPI Depends() 模式
    "TCH001", # 应用内 import 运行时需要解析注解
    "TCH002", # 第三方 import 运行时需要解析注解
    "TCH003", # 标准库 import 同理
    "S104",   # 绑定 0.0.0.0 是预期行为
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "PTH100", "PTH120"]
"tests/**/*.py" = ["S105", "S106", "S603"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
strict = false
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["unit: 单元测试", "integration: 集成测试", "e2e: 端到端测试"]
addopts = "--strict-markers -ra"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
update_changelog_on_bump = true
