[project]
name = "discovery-server-release-cpu"
version = "2.1.0"
description = "CPU-only dependency manifest for discovery-server release builds"
requires-python = ">=3.14,<3.15"
dependencies = [
    "acps-sdk",
    "aiohttp>=3.13.5,<4.0.0",
    "alembic>=1.18.4,<2.0.0",
    "alembic-postgresql-enum>=1.10.0,<2.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "cbor>=1.0.0,<2.0.0",
    "click>=8.3.3,<9.0.0",
    "cryptography>=47.0.0,<48.0.0",
    "dashscope>=1.25.17,<2.0.0",
    "defusedxml>=0.7.1,<1.0.0",
    "fastapi>=0.136.1,<1.0.0",
    "greenlet>=3.5.0,<4.0.0",
    "httpx>=0.28.1,<0.29.0",
    "ijson>=3.5.0,<4.0.0",
    "inscriptis>=2.6.0,<3.0.0",
    "ir-datasets>=0.5.11,<0.6.0",
    "lxml>=6.1.0,<7.0.0",
    "numpy>=2.4.4,<3.0.0",
    "openai>=2.33.0,<3.0.0",
    "pandas>=3.0.2,<4.0.0",
    "pgvector>=0.4.2,<1.0.0",
    "psutil>=7.2.2,<8.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.14.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "python-multipart>=0.0.27,<1.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "requests>=2.33.1,<3.0.0",
    "scikit-learn>=1.8.0,<1.9.0",
    "scipy>=1.17.1,<1.18.0",
    "sqlalchemy>=2.0.49,<2.1.0",
    "sqlmodel>=0.0.38,<0.1.0",
    "starlette>=1.0.0,<2.0.0",
    "structlog>=25.5.0,<26.0.0",
    "uvicorn>=0.46.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
acps-sdk = { path = "../../../../acps-sdk", editable = true }
